--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,4 +7,9 @@ edition = "2021"
 actix-web = { version = "4.9.0", default-features = false, features = [
     "macros",
 ] }
+chrono = { version = "0.4.0", default-features = false, features = ["serde", "now"] }
 serde = { version = "1.0", features = ["derive"] }
+
+[profile.release]
+lto = true
+strip = true
