--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,6 +9,7 @@ actix-web = { version = "4.9.0", default-features = false, features = [
 ] }
 chrono = { version = "0.4.0", default-features = false, features = ["serde", "now"] }
 serde = { version = "1.0", features = ["derive"] }
+sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio", "postgres"] }
 
 [profile.release]
 lto = true
